# backend/base/controllers/employee_controller.py
@@ -7,37 +7,41 @@ from base.models.employee_put_request_body import EmployeePutRequestBody  # noqa
 from base import util
 
 
-def delete_employee(employee_id):  # noqa: E501
+def delete_employee(name):  # noqa: E501
     """delete_employee
 
     Delete a list of action recommendation by targetType and targetId # noqa: E501
 
-    :param employee_id: 
-    :type employee_id: str
+    :param name: 
+    :type name: str
 
     :rtype: Employee
     """
     return 'do some magic!'
 
 
-def get_employee(employee_id):  # noqa: E501
+def get_employee(name):  # noqa: E501
     """get_employee
 
     Get a list of action recommendation by targetType and targetId # noqa: E501
 
-    :param employee_id: 
-    :type employee_id: str
+    :param name: 
+    :type name: str
 
     :rtype: Employee
     """
     return 'do some magic!'
 
 
-def get_employees():  # noqa: E501
+def get_employees(random_get=None, participant=None):  # noqa: E501
     """get_employees
 
-    get all employees # noqa: E501
+    get employees under several conditions # noqa: E501
 
+    :param random_get: 
+    :type random_get: bool
+    :param participant: 
+    :type participant: bool
 
     :rtype: List[Employee]
     """
@@ -59,13 +63,13 @@ def post_employees(employee_post_request_body=None):  # noqa: E501
     return 'do some magic!'
 
 
-def put_employee(employee_id, employee_put_request_body=None):  # noqa: E501
-    """put_employee
+def put_employee_by_name(name, employee_put_request_body=None):  # noqa: E501
+    """put_employee_by_name
 
-    update description for an employee # noqa: E501
+    update omittetd and participate for the employee # noqa: E501
 
-    :param employee_id: 
-    :type employee_id: str
+    :param name: 
+    :type name: str
     :param employee_put_request_body: 
     :type employee_put_request_body: dict | bytes
 
