# backend/base/models/employee.py
@@ -15,31 +15,41 @@ class Employee(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, employee_id=None, name=None, description=None):  # noqa: E501
+    def __init__(self, name=None, department=None, team=None, omitted=None, participate=None):  # noqa: E501
         """Employee - a model defined in OpenAPI
 
-        :param employee_id: The employee_id of this Employee.  # noqa: E501
-        :type employee_id: str
         :param name: The name of this Employee.  # noqa: E501
         :type name: str
-        :param description: The description of this Employee.  # noqa: E501
-        :type description: str
+        :param department: The department of this Employee.  # noqa: E501
+        :type department: str
+        :param team: The team of this Employee.  # noqa: E501
+        :type team: str
+        :param omitted: The omitted of this Employee.  # noqa: E501
+        :type omitted: bool
+        :param participate: The participate of this Employee.  # noqa: E501
+        :type participate: bool
         """
         self.openapi_types = {
-            'employee_id': str,
             'name': str,
-            'description': str
+            'department': str,
+            'team': str,
+            'omitted': bool,
+            'participate': bool
         }
 
         self.attribute_map = {
-            'employee_id': 'employeeId',
             'name': 'name',
-            'description': 'description'
+            'department': 'department',
+            'team': 'team',
+            'omitted': 'omitted',
+            'participate': 'participate'
         }
 
-        self._employee_id = employee_id
         self._name = name
-        self._description = description
+        self._department = department
+        self._team = team
+        self._omitted = omitted
+        self._participate = participate
 
     @classmethod
     def from_dict(cls, dikt) -> 'Employee':
@@ -51,27 +61,6 @@ class Employee(Model):
         :rtype: Employee
         """
         return util.deserialize_model(dikt, cls)
-
-    @property
-    def employee_id(self):
-        """Gets the employee_id of this Employee.
-
-
-        :return: The employee_id of this Employee.
-        :rtype: str
-        """
-        return self._employee_id
-
-    @employee_id.setter
-    def employee_id(self, employee_id):
-        """Sets the employee_id of this Employee.
-
-
-        :param employee_id: The employee_id of this Employee.
-        :type employee_id: str
-        """
-
-        self._employee_id = employee_id
 
     @property
     def name(self):
@@ -95,22 +84,85 @@ class Employee(Model):
         self._name = name
 
     @property
-    def description(self):
-        """Gets the description of this Employee.
+    def department(self):
+        """Gets the department of this Employee.
 
 
-        :return: The description of this Employee.
+        :return: The department of this Employee.
         :rtype: str
         """
-        return self._description
+        return self._department
 
-    @description.setter
-    def description(self, description):
-        """Sets the description of this Employee.
+    @department.setter
+    def department(self, department):
+        """Sets the department of this Employee.
 
 
-        :param description: The description of this Employee.
-        :type description: str
+        :param department: The department of this Employee.
+        :type department: str
         """
 
-        self._description = description
+        self._department = department
+
+    @property
+    def team(self):
+        """Gets the team of this Employee.
+
+
+        :return: The team of this Employee.
+        :rtype: str
+        """
+        return self._team
+
+    @team.setter
+    def team(self, team):
+        """Sets the team of this Employee.
+
+
+        :param team: The team of this Employee.
+        :type team: str
+        """
+
+        self._team = team
+
+    @property
+    def omitted(self):
+        """Gets the omitted of this Employee.
+
+
+        :return: The omitted of this Employee.
+        :rtype: bool
+        """
+        return self._omitted
+
+    @omitted.setter
+    def omitted(self, omitted):
+        """Sets the omitted of this Employee.
+
+
+        :param omitted: The omitted of this Employee.
+        :type omitted: bool
+        """
+
+        self._omitted = omitted
+
+    @property
+    def participate(self):
+        """Gets the participate of this Employee.
+
+
+        :return: The participate of this Employee.
+        :rtype: bool
+        """
+        return self._participate
+
+    @participate.setter
+    def participate(self, participate):
+        """Sets the participate of this Employee.
+
+
+        :param participate: The participate of this Employee.
+        :type participate: bool
+        """
+
+        self._participate = participate
